--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,26 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.sunshine.app" >
+    package="com.github.nekdenis.currencylist">
 
     <!-- This permission is necessary in order for Sunshine to perform network access. -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <!-- Permissions required by the sync adapter -->
-    <uses-permission
-        android:name="android.permission.READ_SYNC_SETTINGS"/>
-    <uses-permission
-        android:name="android.permission.WRITE_SYNC_SETTINGS"/>
-    <uses-permission
-        android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
-            android:name="com.example.android.sunshine.app.MainActivity"
-            android:theme="@style/ForecastTheme" >
+            android:name=".activity.MainActivity"
+            android:theme="@style/ForecastTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,28 +26,29 @@
         </activity>
         <activity
             android:label="@string/title_activity_detail"
-            android:name="com.example.android.sunshine.app.DetailActivity"
-            android:parentActivityName="com.example.android.sunshine.app.MainActivity" >
+            android:name=".activity.DetailActivity"
+            android:parentActivityName=".activity.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.android.sunshine.app.MainActivity" />
+                android:value=".activity.MainActivity" />
         </activity>
         <activity
             android:label="@string/title_activity_settings"
-            android:name="com.example.android.sunshine.app.SettingsActivity"
-            android:parentActivityName="com.example.android.sunshine.app.MainActivity" >
+            android:name=".activity.SettingsActivity"
+            android:parentActivityName=".activity.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.android.sunshine.app.MainActivity" />
+                android:value=".activity.MainActivity" />
         </activity>
+
         <provider
-            android:authorities="@string/content_authority"
-            android:name=".data.WeatherProvider"
+            android:name="com.github.nekdenis.currencylist.db.provider.Provider"
+            android:authorities="com.github.nekdenis.currencylistprovider"
             android:exported="false"
             android:syncable="true" />
 
         <!-- SyncAdapter's dummy authentication service -->
-        <service android:name=".sync.SunshineAuthenticatorService">
+        <service android:name=".sync.CurrenciesAuthenticatorService">
             <intent-filter>
                 <action android:name="android.accounts.AccountAuthenticator" />
             </intent-filter>
@@ -61,9 +59,8 @@
 
         <!-- The SyncAdapter service -->
         <service
-            android:name=".sync.SunshineSyncService"
-            android:exported="true"
-            >
+            android:name="com.github.nekdenis.currencylist.sync.SunshineSyncService"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.content.SyncAdapter" />
             </intent-filter>
